# DeepAgents-Practice

./: .gitignore  langgraph.json  note.md  note_overall.md  note_subagents.md  pyproject.toml  test.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
OpenClaw_project/: langgraph.json  mcp工具列表.txt  motorparts_db.sql  readme.txt  requirements.txt  start_web.py
OpenClaw_project/agent/: config.py  schema.py
OpenClaw_project/agent.egg-info/: PKG-INFO  SOURCES.txt
OpenClaw_project/agent/memory/: AGENTS.md  prompts.py
OpenClaw_project/agent/subagents/: loader.py
OpenClaw_project/frontend/: index.html  package-lock.json  package.json  vite.config.js
OpenClaw_project/frontend/src/: App.vue  main.js
OpenClaw_project/mcp_server/: http_base.py  server_config.py  server_main.py
OpenClaw_project/test/: agent_test.py  test_all_tools.py
agent/: env_utils.py  my_agent1.py  my_agent2.py  my_agent3.py  my_agent4.py  my_backend.py  my_llm.py  my_tools.py
llm/: my_llm.py
multi_agent/: AGENTS.md  primary_agent.py  subagents.yaml
multi_agent/mcp_tool_config/: mcp_tool_config.py
notes/: note1_overall.md  note2_subagents.md  note3_sandbox.md  note4_OpenClaw_project.md  note_sandbox.md  note_subagents.md
sandbox/: OpenSandboxBackend_by_Tuo.py  opensandbox_opt.py  sandbox-daytona.py  sandbox_agent.py
skills/linux-system-info/: SKILL.md  get_system_info.py
skills/price-calculator/: SKILL.md
skills/wechat-article-search-0.1.0/: SKILL.md
tests/unit_tests/: test_agent.py
(+70 files in other folders)
