[project]
name = "37-deepagents-practice"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "daytona>=0.173.0",
    "deepagents==0.4.12",
    "dotenv>=0.9.9",
    "fastmcp>=3.3.1",

    # 🔒 LangChain ecosystem - exact pins
    "langchain==1.2.13",
    "langchain-core==1.2.22",
    "langchain-openai==1.1.12",
    "langchain-mcp-adapters==0.2.2",
    "langchain-anthropic==1.4.0",
    "langchain-google-genai==4.2.1",

    # 🔒 LangGraph ecosystem - ALL sub-packages pinned
    "langgraph==1.1.3",
    "langgraph-prebuilt==1.0.8",
    "langgraph-runtime-inmem==0.27.0",
    "langgraph-api==0.7.90",
    "langgraph-checkpoint==4.0.1",
    "langgraph-checkpoint-redis==0.4.0",
    "langgraph-cli[inmem]==0.4.19",  # Note: exact version, not >=
    "langgraph-sdk==0.3.12",

    # Other dependencies
    "langgraph-checkpoint-mongodb>=0.4.0",
    "loguru>=0.7.3",
    "opensandbox-code-interpreter>=0.1.2",
    "opensandbox-server>=0.1.13",
    "zai-sdk>=0.2.2",
]
